tests/paczka1/fuzzy1/15209762.err
Error in line 2: kwgSaL S28 21,4
Error in line 5: bcwjAdaN S606 99,0
Error in line 17: NJxSEFLr S606 3,0
Error in line 20: bcwjAdaN A925 99,2
Error in line 16: S28 A900 69,1
Error in line 24: oEavF5QN A925 120,1
